--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-image-viewing",
-  "version": "0.2.0",
+  "name": "@connectedbits/react-native-image-viewing",
+  "version": "0.2.0.alpha1",
   "description": "React Native modal component for viewing images as a sliding gallery",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
